# food-delivery

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  Makefile  Procfile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
food_delivery/: __init__.py  admin.py  db_utils.py  extensions.py  form.py  models.py  settings.py  utils.py  validators.py
food_delivery/blueprints/: auth.py  main.py
food_delivery/templates/: account.html  admin_dashboard.html  auth.html  base.html  cart.html  main.html  nav.html  registration.html
migrations/versions/: 068dc5b0c7d7_.py  33ce26fcd675_.py  685cff1741b9_.py  755b0eebdc69_.py  a2dc8d47ac59_.py  b0ecaa96d828_.py  bce8d5c3fce4_.py  cd7bef1ae813_.py  e85b463ea83c_.py  f4377538b737_.py
tests/: conftest.py  test_models.py  test_routes.py  test_validators.py
