[tool.poetry]
name = "food-delivery"
version = "0.1.0"
description = ""
authors = ["alpden550 <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
psycopg2-binary = "^2.8.4"
flask-sqlalchemy = "^2.4.1"
Flask-Migrate = "^2.5.2"
gunicorn = "^20.0.4"
sqlalchemy-utils = "^0.36.1"
flask-debugtoolbar = "^0.10.1"
Flask-WTF = "^0.14.3"
phonenumbers = "^8.11.4"
flask-login = "^0.5.0"
flask-admin = "^1.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
wemake-python-styleguide = "^0.13.4"
autopep8 = "^1.5"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
